--- a/Serko.Tests/packages.config
+++ b/Serko.Tests/packages.config
@@ -7,4 +7,6 @@
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Ninject" version="3.3.4" targetFramework="net461" />
+  <package id="tslint" version="5.17.0" targetFramework="net461" />
 </packages>
