added try catch for expenseRepo

--- a/Serko.Tests/Serko.Tests.csproj
+++ b/Serko.Tests/Serko.Tests.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\TotalExpenseControllerTest.cs" />
+    <Compile Include="Controllers\UploadControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
